--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <script>
         // --- CONFIGURE AQUI ---
-        const N8N_WEBHOOK_URL = 'https://SEU-DOMINIO.n8n.cloud/webhook/validate-token'; // <-- SUBSTITUA PELA SUA URL DE PRODUÇÃO DO N8N
-        const FILLOUT_FORM_URL = 'https://fillout.com/t/SEU-FORM-ID'; // <-- SUBSTITUA PELA URL DO SEU FORMULÁRIO FILLOUT
+        const N8N_WEBHOOK_URL = 'https://mmp25.app.n8n.cloud/webhook/fe7f3958-a029-4d54-93e2-bc129d99b3fd'; // <-- SUBSTITUA PELA SUA URL DE PRODUÇÃO DO N8N
+        const FILLOUT_FORM_URL = 'https://forms.fillout.com/t/cirrkeuRr2us'; // <-- SUBSTITUA PELA URL DO SEU FORMULÁRIO FILLOUT
         // --------------------
 
         const tokenInput = document.getElementById('tokenInput');
