--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>Acesso Restrito</h2>
         <p>Por favor, insira seu código de acesso (token) para continuar.</p>
         <input type="text" id="tokenInput" placeholder="Seu token aqui">
-        <button id="validateButton" onclick="validateToken()">Validar e Continuar</button>
+        <button id="validateButton" onclick="validateToken()">Validar e Continuar...</button>
         <div id="message"></div>
     </div>
 
