--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         #message { margin-top: 15px; font-weight: 500; }
         .error { color: #DE350B; }
         .success { color: #00875A; }
+        .recovery-link { display: block; margin-top: 20px; color: #0052CC; text-decoration: none; font-size: 14px; }
+        .recovery-link:hover { text-decoration: underline; }
     </style>
 </head>
 <body>
@@ -23,8 +25,11 @@
         <h2>Acesso Restrito</h2>
         <p>Por favor, insira seu código de acesso (token) para continuar.</p>
         <input type="text" id="tokenInput" placeholder="Seu token aqui">
-        <button id="validateButton" onclick="validateToken()">Validar e Continuar.3  </button>
+        <button id="validateButton" onclick="validateToken()">Validar e Continuar</button>
         <div id="message"></div>
+        
+        <!-- LINK PARA RECUPERAR TOKEN (AJUSTE 2) -->
+        <a href="/recuperar-token" class="recovery-link">Clique aqui caso precise recuperar o seu token.</a>
     </div>
 
     <script>
@@ -36,6 +41,15 @@
         const tokenInput = document.getElementById('tokenInput');
         const validateButton = document.getElementById('validateButton');
         const messageDiv = document.getElementById('message');
+
+        // AJUSTE 1: Ler o parâmetro "codigo" da URL e preencher o campo automaticamente
+        window.addEventListener('DOMContentLoaded', () => {
+            const params = new URLSearchParams(window.location.search);
+            const codigoDaUrl = params.get('codigo');
+            if (codigoDaUrl) {
+                tokenInput.value = codigoDaUrl;
+            }
+        });
 
         async function validateToken() {
             const token = tokenInput.value.trim();
